<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <EditText
        android:id="@+id/text_field_one"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/firstname"
        android:inputType="textCapWords"
        android:maxLength="12"
        android:maxLines="1">

        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/text_field_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="textCapWords"
        android:maxLength="15"
        android:maxLines="1"
        android:minWidth="200dp">

    </EditText>

    <EditText
        android:id="@+id/text_field_three"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        />
</LinearLayout>
    
 
